--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <div class="container"></div>
+
   <body>
-    
+    <div class="container">
       <div class="block">
         <h1>Gooday Mate, I'am Favot</h1>
 
@@ -74,7 +74,6 @@
           </li>
         </ul>
       </div>
-    </body>
     </div>
-  
+  </body>
 </html>
